// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayStorage invalid "reference" 1`] = `
"snippetCode.ts (4,32): Builtin properties cannot be referenced

      2 |       import { ArrayStorage } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = ArrayStorage['for'];
        |                                ^
      5 |     
"
`;

exports[`ArrayStorage invalid create 1`] = `
"snippetCode.ts (4,23): Persistent storage classes may only be used as SmartContract properties.

      2 |       import { ArrayStorage } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const storage = ArrayStorage.for<number>();
        |                       ^
      5 |     
"
`;

exports[`ArrayStorage invalid reference - object 1`] = `
"snippetCode.ts (4,15): Builtin properties cannot be referenced

      2 |       import { ArrayStorage } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const { for } = ArrayStorage;
        |               ^
      5 |     
"
`;

exports[`ArrayStorage invalid reference 1`] = `
"snippetCode.ts (4,32): Builtin properties cannot be referenced

      2 |       import { ArrayStorage } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = ArrayStorage.for;
        |                                ^
      5 |     
"
`;
